--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,6 +1,6 @@
-.header {
-    // display: flex;
-}
+@use 'src/styles/vars';
+
+.header {}
 
 .header-top {
     position: relative;
@@ -8,13 +8,17 @@
     margin: 1em;
     justify-content: center;
 
+
     &__title {
         margin: 0.5em;
+        font-size: 2em;
+        font-family: vars.$font2;
     }
 
     &__avatar {
         position: absolute;
         right: 0;
+        top: 0.6em;
         display: flex;
         justify-self: flex-end;
     }
@@ -25,7 +29,7 @@
     }
 }
 
-.header-nav {
+.header .header-nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -36,6 +40,8 @@
 
     &__button {
         width: 25%;
+        background-color: '#12824C';
+        color: '#FFFFFF';
 
     }
 }
