--- a/src/components/Track/track.scss
+++ b/src/components/Track/track.scss
@@ -10,4 +10,22 @@
 	& .fa-flag {
 		color: green;
 	}
+
+	&-hiking-map {
+		margin-top: 1rem;
+		position: relative;
+		padding-bottom: 56.25%;
+		overflow: hidden;
+	
+		& iframe {
+			overflow: hidden;
+			border: 0;
+			align-self: center;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+	}
 }
