--- a/src/components/Track/track.scss
+++ b/src/components/Track/track.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/vars';
 
-.track {
+ .App .track {
 	padding: 1rem;
 
 	& .fa-map-location-dot {
@@ -28,4 +28,21 @@
 			height: 100%;
 		}
 	}
+
+	&-img {
+		background-color: #fff;
+    color: rgba(0, 0, 0, 0.87);
+    -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+    overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 8px;
+    margin-bottom: 8px;  
+	}
+	
 }
