--- a/src/components/Track/track.scss
+++ b/src/components/Track/track.scss
@@ -7,10 +7,7 @@
 	font-family: vars.$font1;
 	line-height: 1.2rem;;
 	
-	&-container {
-	}
-
-	&-title, &-resume, &-steps{
+		&-title, &-resume, &-steps, &-photos{
 		font-size: 1.3em;
 		font-family: vars.$font1;
 		margin: 1.5rem 0 1rem;
