--- a/src/components/Track/track.scss
+++ b/src/components/Track/track.scss
@@ -72,8 +72,11 @@
     margin-bottom: 8px;  
 	}
 	
-	&-button {
+	&-link {
 		width: 100%;
 		margin: 0 0.5rem;
+	}
+	&-button {
+		width: 100%;
 	}
 }
