--- a/src/components/Weather/weather.scss
+++ b/src/components/Weather/weather.scss
@@ -2,11 +2,18 @@
 
 .App .weather {
 	margin-top: 1rem;
+	color: white;
 
 	&-title {
 		// font-size: 1.5em;
 		font-family: vars.$font1;
 		margin: 1.5rem 0 1rem;
 		font-weight: bold;
+		color: #eee;
+		text-shadow: 2px 2px 2px black;
+	}
+	&-infos {
+		color: #eee;
+		text-shadow: 2px 2px 2px black;
 	}
 }
