--- a/src/components/Weather/weather.scss
+++ b/src/components/Weather/weather.scss
@@ -3,6 +3,7 @@
 .App .weather {
 	margin-top: 1rem;
 	color: white;
+	position: relative;
 
 	&-title {
 		// font-size: 1.5em;
@@ -15,5 +16,19 @@
 	&-infos {
 		color: #eee;
 		text-shadow: 2px 2px 2px black;
+	}
+	&-image-contributor {
+			font-size: 11px;
+			text-align: right; 
+			background: rgba(255,255,255,0.7);
+			position: absolute;
+			bottom: 8px;
+			right: 8px;
+			color: black;
+			
+			&-link {
+				color: #4285f4;
+
+			}
 	}
 }
