--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,4 +1,9 @@
 .header-contact {
     display: flex;
     justify-content: center;
+    height: auto;
+
+    &__chip {
+        margin-bottom: 1em;
+    }
 }
