--- a/src/components/Track/track.scss
+++ b/src/components/Track/track.scss
@@ -1,12 +1,16 @@
 @use 'src/styles/vars';
 
- .App .track {
+.App .track {
 	padding: 0 1rem;
 	text-align: left;
 	font-family: vars.$font1;
-	line-height: 1.2rem;;
-	
-		&-title, &-resume, &-steps, &-photos{
+	line-height: 1.2rem;
+	;
+
+	&-title,
+	&-resume,
+	&-steps,
+	&-photos {
 		font-size: 1.3em;
 		font-family: vars.$font1;
 		margin: 1.5rem 0 1rem;
@@ -15,17 +19,18 @@
 	}
 
 	& .fa-map-location-dot {
-		color: orange;
+		color: #007720;
 	}
+
 	& .fa-flag-checkered {
-		color: green;
+		color: #007720;
 		margin-left: 0.5rem;
 	}
 
 	&-info {
 		margin-bottom: 1rem;
 		font-weight: bold;
-		
+
 	}
 
 	&-hiking-map {
@@ -34,17 +39,17 @@
 		padding-bottom: 56.25%;
 		overflow: hidden;
 		background-color: #fff;
-    color: rgba(0, 0, 0, 0.87);
-    -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    border-radius: 4px;
-    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
-    overflow: hidden;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-	
+		color: rgba(0, 0, 0, 0.87);
+		-webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+		transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+		border-radius: 4px;
+		box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+		overflow: hidden;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+
 		& iframe {
 			overflow: hidden;
 			border: 0;
@@ -59,24 +64,25 @@
 
 	&-img {
 		background-color: #fff;
-    color: rgba(0, 0, 0, 0.87);
-    -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    border-radius: 4px;
-    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
-    overflow: hidden;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 8px;
-    margin-bottom: 8px;  
+		color: rgba(0, 0, 0, 0.87);
+		-webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+		transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+		border-radius: 4px;
+		box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+		overflow: hidden;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		margin-top: 8px;
+		margin-bottom: 8px;
 	}
-	
+
 	&-link {
 		width: 100%;
 		margin: 0 0.5rem;
 	}
+
 	&-button {
 		width: 100%;
 	}
