--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,9 +6,8 @@
 }
 
 .header-top {
-    position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 
 
     &__title {
@@ -19,7 +18,6 @@
     }
 
     &__avatar {
-        position: absolute;
         right: 1em;
         top: 0.6em;
         display: flex;
@@ -32,7 +30,6 @@
     }
 
     &__home {
-        position: absolute;
         left: 3em;
         top: 0.6em;
         display: flex;
