--- a/src/components/SearchBar/searchBar.scss
+++ b/src/components/SearchBar/searchBar.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     gap: 1em;
-    margin-top: 1em;
+    margin: 1em 0;
 
     &__button {
         background-color: '#12824C';
