--- a/src/components/LiftOff/liftOff.scss
+++ b/src/components/LiftOff/liftOff.scss
@@ -10,7 +10,7 @@
 	&-title{
 		font-size: 1.3em;
 		font-family: vars.$font1;
-		margin: 1.5rem 0 1rem;
+		margin: 1rem;
 		font-weight: bold;
 
 	}
