fix: fix background image for safari browser

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,8 @@ body {
 	font-family: vars.$font2;
 	// font-size: calc(16px + 1vw);
 	// line-height: calc(1.1rem + 0.5vw);
-
-		background: url('../assets/img/bg-paragliding2.avif') no-repeat center/cover;
+		background: url('../assets/img/bg-paragliding2.jpg') no-repeat center/cover;
+	
 
 }
 .bg-layer {
