--- a/src/components/Track/track.scss
+++ b/src/components/Track/track.scss
@@ -5,7 +5,7 @@
 	text-align: left;
 	font-family: vars.$font1;
 	line-height: 1.2rem;
-	// max-width: 900px;
+	max-width: 900px;
 	margin: 0 auto;
 	width: 100%;
 	
